--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DraftBot-A-Discord-Adventure",
+  "name": "fr.bast.draftbot",
   "version": "1.0.0",
   "dependencies": {
     "chai": "^4.2.0",
