--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "discord.js": "^11.4.2",
     "mocha": "^5.2.0",
     "sinon": "^6.3.5",
-    "sinon-chai": "^3.2.0"
+    "sinon-chai": "^3.2.0",
+    "sqlite": "^3.0.0"
   }
 }
