--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "chai": "^4.2.0",
     "discord.js": "^11.5.0",
+    "js": "^0.1.0",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
     "sqlite": "^3.0.3"
