--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "fr.bast.draftbot",
   "version": "1.4.1",
+  "main": "draftbot.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/BastLast/DraftBot-A-Discord-Adventure.git"
+  },
   "dependencies": {
     "chai": "^4.2.0",
     "discord.js": "^11.5.0",
