--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "fr.bast.draftbot",
-  "version": "1.5.0",
-  "main": "draftbot.js",
+  "version": "2.0.0",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/BastLast/DraftBot-A-Discord-Adventure.git"
   },
+  "scripts": {
+    "start": "node index.js",
+    "postinstall": "link-module-alias"
+  },
+  "_moduleAliases": {
+    "draftbot": ".",
+    "config": "./config",
+    "data": "./data",
+    "class": "./src/classes",
+    "commands": "./src/commands",
+    "utils": "./src/utils"
+  },
   "dependencies": {
     "chai": "^4.2.0",
-    "discord.js": "^11.6.2",
+    "colors": "^1.4.0",
+    "discord.js": "^12.2.0",
+    "figlet": "^1.3.0",
+    "link-module-alias": "^1.2.0",
     "moment": "^2.24.0",
-    "sqlite": "^3.0.3"
+    "sqlite": "^4.0.7",
+    "sqlite3": "^4.1.1"
   }
 }
