--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class": "./src/classes",
     "commands": "./src/commands",
     "utils": "./src/utils",
-    "orm": "./src/orm"
+    "orm": "./src/orm",
+    "entities": "./src/orm/entities",
+    "repositories": "./src/orm/repositories"
   },
   "dependencies": {
     "chai": "^4.2.0",
