Better start of the bot to ensure everything is loaded, bye commandTable, welcome Command

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "draftbot": ".",
     "config": "./config",
     "data": "./data",
-    "class": "./src/classes",
+    "core": "./src/core",
     "commands": "./src/commands",
     "utils": "./src/utils",
     "orm": "./src/orm",
