--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "figlet": "^1.3.0",
     "link-module-alias": "^1.2.0",
     "moment": "^2.24.0",
-    "npm": "^6.14.4",
     "sqlite": "^4.0.7",
-    "sqlite3": "^4.1.1",
-    "string-template": "^1.0.0"
+    "sqlite3": "^4.1.1"
   }
 }
