--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datasources": "./src/core/datasources",
     "entities": "./src/core/entities",
     "repositories": "./src/core/repositories",
+    "models": "./src/core/models",
     "ressources": "./ressources",
     "data": "./data"
   },
@@ -29,6 +30,7 @@
     "figlet": "^1.3.0",
     "link-module-alias": "^1.2.0",
     "moment": "^2.24.0",
+    "sequelize": "^5.21.7",
     "sqlite": "^4.0.7",
     "sqlite3": "^4.1.1"
   }
