--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "postinstall": "link-module-alias",
-    "preinstall": "which link-module-alias && link-module-alias clean || true"
+    "postinstall": "link-module-alias"
   },
   "_moduleAliases": {
     "draftbot": ".",
