--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "chai": "^4.2.0",
         "colors": "^1.4.0",
+        "dbl-api": "^1.2.1",
         "discord.js": "^12.2.0",
         "figlet": "^1.3.0",
         "link-module-alias": "^1.2.0",
