--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "fr.bast.draftbot",
 	"version": "2.2.1",
-	"main": "index.js",
+	"main": "src/index.js",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/BastLast/DraftBot-A-Discord-Adventure.git"
 	},
 	"scripts": {
-		"start": "node index.js",
-		"postinstall": "link-module-alias"
+		"start": "tsc && node dist/index.js",
+		"postinstall": "link-module-alias",
+		"test": "jest"
 	},
 	"_moduleAliases": {
 		"draftbot": ".",
@@ -19,7 +20,15 @@
 		"attacks": "./src/core/fights/attacks",
 		"resources": "./resources"
 	},
+	"jest": {
+		"verbose": true,
+		"testPathIgnorePatterns": ["dist"]
+	},
 	"dependencies": {
+		"@types/bluebird": "^3.5.35",
+		"@types/jest": "^26.0.23",
+		"@types/validator": "^13.1.3",
+		"@types/ws": "^7.4.4",
 		"chai": "^4.2.0",
 		"colors": "^1.4.0",
 		"dblapi.js": "^2.4.1",
@@ -30,11 +39,14 @@
 		"random-js": "^2.1.0",
 		"sequelize": "^5.21.7",
 		"sqlite": "^4.0.7",
-		"sqlite3": "^4.1.1"
+		"sqlite3": "^4.1.1",
+		"ts-jest": "^27.0.2",
+		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
 		"eslint": "^7.4.0",
 		"eslint-config-google": "^0.14.0",
+		"jest": "^27.0.4",
 		"jshint": "^2.12.0"
 	}
 }
