#427 really small refactor and somes rules updated

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,9 +57,9 @@
 				"keyword-spacing": "warn",
 				"lines-between-class-members": "warn",
 				"max-depth": ["warn", 5],
-				"max-len": "warn",
+				"max-len": ["warn",100],
 				"max-lines": ["warn", 800],
-				"max-lines-per-function": ["warn", 30],
+				"max-lines-per-function": ["warn", 50],
 				"max-params": ["warn", 6],
 				"new-cap": "warn",
 				"new-parens": "warn",
