--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,7 @@
 				"max-depth": ["warn", 5],
 				"max-len": ["warn", 200],
 				"max-lines": ["warn", 800],
-				"max-lines-per-function": ["warn", 50],
+				"max-lines-per-function": "off",
 				"max-params": ["warn", 6],
 				"new-cap": "warn",
 				"new-parens": "warn",
