--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "fr.bast.draftbot",
 	"version": "2.2.1",
 	"main": "src/index.js",
+	"engines": {
+		"node": ">=14.17.2"
+	},
+	"engineStrict" : true,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/BastLast/DraftBot-A-Discord-Adventure.git"
