--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"sequelize": "^5.21.7",
 		"sqlite": "^4.0.7",
 		"sqlite3": "^4.2.0",
+		"sync-request": "^6.1.0",
 		"ts-jest": "^27.0.2",
 		"typescript": "^4.3.2",
 		"typescript-eslint": "^0.0.1-alpha.0"
