--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test": "tsc && jest dist/test",
 		"eslint": "eslint src test",
 		"eslintFix": "eslint src test --fix",
-		"tsc": "tsc"
+		"tsc": "tsc",
+		"pm2": "tsc && pm2 start pm2.config.js"
 	},
 	"_moduleAliases": {
 		"draftbot": ".",
