--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
 		"verbose": true
 	},
 	"dependencies": {
+		"@types/archiver": "^5.1.1",
 		"@types/bluebird": "^3.5.35",
 		"@types/jest": "^26.0.23",
 		"@types/validator": "^13.1.3",
 		"@types/ws": "^7.4.4",
+		"archiver": "^5.3.0",
+		"archiver-zip-encryptable": "^1.0.10",
 		"chai": "^4.2.0",
 		"colors": "^1.4.0",
 		"dblapi.js": "^2.4.1",
 		"discord.js": "^12.2.0",
+		"dropbox": "^10.9.0",
 		"figlet": "^1.3.0",
 		"link-module-alias": "^1.2.0",
 		"moment": "^2.24.0",
