--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"@types/archiver": "^5.1.1",
 		"@types/bluebird": "^3.5.35",
 		"@types/jest": "^26.0.23",
-		"@types/validator": "^13.1.3",
+		"@types/node": "^16.11.6",
+		"@types/validator": "^13.6.5",
 		"@types/ws": "^7.4.4",
 		"archiver": "^5.3.0",
 		"archiver-zip-encryptable": "^1.0.10",
