--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"sequelize": "^5.21.7",
 		"sqlite3": "^5.0.2",
 		"ts-jest": "^27.0.2",
+		"typescript": "^4.3.2",
 		"typescript-eslint": "^0.0.1-alpha.0"
 	},
 	"devDependencies": {
@@ -58,7 +59,6 @@
 		"eslint": "^7.28.0",
 		"eslint-config-google": "^0.14.0",
 		"jest": "^27.0.4",
-		"jshint": "^2.12.0",
-		"typescript": "^4.5.4"
+		"jshint": "^2.12.0"
 	}
 }
