--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"eslint": "eslint src test",
 		"eslintFix": "eslint src test --fix",
 		"tsc": "tsc",
-		"pm2": "tsc && pm2 start pm2.config.js"
+		"pm2": "tsc && pm2 start pm2.config.js",
+		"yarnInstall": "yarn install"
 	},
 	"_moduleAliases": {
 		"draftbot": ".",
