Ajout du gain de money dans les json + fix de bug #153

--- a/resources/text/missions/earnXP.json
+++ b/resources/text/missions/earnXP.json
@@ -28,15 +28,19 @@
 	],
 	"gems": [
 		2,
-		3,
-		7,
-		15
+		3
 	],
 	"xp": [
-		20,
+		10,
 		30,
-		70,
-		150
+		45,
+		75
+	],
+	"money": [
+		15,
+		25,
+		50,
+		100
 	],
 	"expirations": [
 		36,
