--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/bluebird": "^3.5.35",
 		"@types/jest": "^26.0.23",
 		"@types/node": "^16.11.6",
+		"@types/node-ipc": "^9.2.0",
 		"@types/validator": "^13.6.5",
 		"@types/ws": "^7.4.4",
 		"archiver": "^5.3.0",
@@ -48,6 +49,7 @@
 		"figlet": "^1.3.0",
 		"link-module-alias": "^1.2.0",
 		"moment": "^2.24.0",
+		"node-ipc": "^10.1.0",
 		"random-js": "^2.1.0",
 		"sequelize": "6.8.0",
 		"sqlite3": "^5.0.2",
