--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"verbose": true
 	},
 	"dependencies": {
+		"@discordjs/rest": "^0.3.0",
 		"@types/archiver": "^5.1.1",
 		"@types/bluebird": "^3.5.35",
 		"@types/jest": "^26.0.23",
@@ -44,7 +45,8 @@
 		"chai": "^4.2.0",
 		"colors": "^1.4.0",
 		"dblapi.js": "^2.4.1",
-		"discord.js": "13.2.0",
+		"discord-api-types": "^0.29.0",
+		"discord.js": "13.6.0",
 		"dropbox": "^10.9.0",
 		"figlet": "^1.3.0",
 		"link-module-alias": "^1.2.0",
