--- a/package.json
+++ b/package.json
@@ -32,37 +32,39 @@
 		"verbose": true
 	},
 	"dependencies": {
-		"@types/archiver": "^5.1.1",
-		"@types/bluebird": "^3.5.35",
-		"@types/jest": "^26.0.23",
-		"@types/node": "^16.11.6",
+		"@discordjs/rest": "0.3.0",
+		"@types/archiver": "5.1.1",
+		"@types/bluebird": "3.5.35",
+		"@types/jest": "26.0.23",
+		"@types/node": "16.11.6",
 		"@types/node-ipc": "^9.2.0",
-		"@types/validator": "^13.6.5",
-		"@types/ws": "^7.4.4",
-		"archiver": "^5.3.0",
-		"archiver-zip-encryptable": "^1.0.10",
-		"chai": "^4.2.0",
-		"colors": "^1.4.0",
-		"dblapi.js": "^2.4.1",
-		"discord.js": "13.2.0",
-		"dropbox": "^10.9.0",
-		"figlet": "^1.3.0",
-		"link-module-alias": "^1.2.0",
-		"moment": "^2.24.0",
-		"node-ipc": "^10.1.0",
-		"random-js": "^2.1.0",
+		"@types/validator": "13.6.6",
+		"@types/ws": "7.4.4",
+		"archiver": "5.3.0",
+		"archiver-zip-encryptable": "1.0.10",
+		"chai": "4.2.0",
+		"colors": "1.4.0",
+		"dblapi.js": "2.4.1",
+		"discord-api-types": "0.29.0",
+		"discord.js": "13.6.0",
+		"dropbox": "10.13.0",
+		"figlet": "1.4.0",
+		"link-module-alias": "1.2.0",
+		"moment": "2.26.0",
+		"node-ipc": "10.1.0",
+		"random-js": "2.1.0",
 		"sequelize": "6.8.0",
-		"sqlite3": "^5.0.2",
-		"ts-jest": "^27.0.2",
-		"typescript": "^4.3.2",
-		"typescript-eslint": "^0.0.1-alpha.0"
+		"sqlite3": "5.0.2",
+		"ts-jest": "27.0.2",
+		"typescript": "4.3.2",
+		"typescript-eslint": "0.0.1-alpha.0"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.26.0",
-		"@typescript-eslint/parser": "^4.26.0",
-		"eslint": "^7.28.0",
-		"eslint-config-google": "^0.14.0",
-		"jest": "^27.0.4",
-		"jshint": "^2.12.0"
+		"@typescript-eslint/eslint-plugin": "4.26.0",
+		"@typescript-eslint/parser": "4.26.0",
+		"eslint": "7.28.0",
+		"eslint-config-google": "0.14.0",
+		"jest": "27.0.4",
+		"jshint": "2.12.0"
 	}
 }
