--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"@types/bluebird": "3.5.35",
 		"@types/jest": "26.0.23",
 		"@types/node": "16.11.6",
-		"@types/node-ipc": "^9.2.0",
+		"@types/node-ipc": "9.2.0",
 		"@types/validator": "13.6.6",
 		"@types/ws": "7.4.4",
 		"archiver": "5.3.0",
