rephasing of the .editorconfig with eslint #331

--- a/.editorconfig
+++ b/.editorconfig
@@ -119,7 +119,7 @@ ij_typescript_import_sort_members = true
 ij_typescript_import_sort_module_name = false
 ij_typescript_import_use_node_resolution = true
 ij_typescript_imports_wrap = on_every_item
-ij_typescript_indent_case_from_switch = true
+ij_typescript_indent_case_from_switch = false
 ij_typescript_indent_chained_calls = true
 ij_typescript_indent_package_children = 0
 ij_typescript_jsdoc_include_types = false
@@ -295,7 +295,7 @@ ij_javascript_import_sort_members = true
 ij_javascript_import_sort_module_name = false
 ij_javascript_import_use_node_resolution = true
 ij_javascript_imports_wrap = on_every_item
-ij_javascript_indent_case_from_switch = true
+ij_javascript_indent_case_from_switch = false
 ij_javascript_indent_chained_calls = true
 ij_javascript_indent_package_children = 0
 ij_javascript_jsx_attribute_value = braces
