quality bot fixes v3

--- a/.editorconfig
+++ b/.editorconfig
@@ -171,7 +171,7 @@ ij_typescript_space_before_finally_left_brace = true
 ij_typescript_space_before_for_left_brace = true
 ij_typescript_space_before_for_parentheses = true
 ij_typescript_space_before_for_semicolon = false
-ij_typescript_space_before_function_left_parenth = true
+ij_typescript_space_before_function_left_parenth = false
 ij_typescript_space_before_generator_mult = false
 ij_typescript_space_before_if_left_brace = true
 ij_typescript_space_before_if_parentheses = true
