--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"eslintFix": "eslint src test --fix",
 		"tsc": "tsc",
 		"pm2": "tsc && pm2 start pm2.config.js",
-		"yarnInstall": "yarn install"
+		"yarnInstall": "yarn install",
+		"dockerStart": "node dist/src/index.js"
 	},
 	"_moduleAliases": {
 		"draftbot": ".",
