--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules/
 src/utils/eastereggs/EasterEggs.js
 src/utils/eastereggs/key
 src/utils/eastereggs/iv
-config/app.json
+config/config.toml
 *.iml
 logs/*
 package-lock.json
