--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"random-js": "2.1.0",
 		"sequelize": "6.8.0",
 		"sqlite3": "5.0.3",
+		"toml": "^3.0.0",
 		"ts-jest": "27.0.2",
 		"typescript": "4.3.2",
 		"typescript-eslint": "0.0.1-alpha.0"
