--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 	"noEmitOnError": false,
 	"moduleResolution": "node",
 	"skipLibCheck": true,
+	"resolveJsonModule": true,
 	"target": "es6"
 },
 "include": ["src/**/*", "test/**/*"],
