--- a/config/config.default.toml
+++ b/config/config.default.toml
@@ -38,11 +38,7 @@ english_announcements_channel_id = ""
 english_channel_id = ""
 
 
-[database]
-# Type of database to use : mariadb or sqlite
-type = ""
-
-[database.mariadb]
+[database] # MariaDB only
 # The host (ip or DNS) of the database
 host = "127.0.0.1"
 # The port of the database
