Log pet love points change and eslint rules #546

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
 				"lines-between-class-members": "warn",
 				"max-depth": ["warn", 5],
 				"max-len": ["warn", 200],
-				"max-lines": ["warn", 1000],
+				"max-lines": ["off", 1000],
 				"max-lines-per-function": "off",
 				"max-params": ["warn", 6],
 				"new-cap": "warn",
@@ -87,6 +87,7 @@
 				"no-var": "error",
 				"prefer-const": "warn",
 				"@typescript-eslint/no-explicit-any": "off",
-				"@typescript-eslint/explicit-module-boundary-types": "off"
+				"@typescript-eslint/explicit-module-boundary-types": "off",
+				"@typescript-eslint/explicit-function-return-type": "error"
     }
 }
