--- a/package.json
+++ b/package.json
@@ -29,40 +29,42 @@
 		"verbose": true
 	},
 	"dependencies": {
-		"@discordjs/rest": "0.3.0",
-		"@types/archiver": "5.1.1",
-		"@types/bluebird": "3.5.35",
-		"@types/jest": "26.0.23",
-		"@types/node": "16.11.6",
+		"@discordjs/rest": "1.1.0",
+		"@top-gg/sdk": "^3.1.3",
+		"@types/archiver": "5.3.1",
+		"@types/bluebird": "3.5.36",
+		"@types/express": "4.17.13",
+		"@types/jest": "29.0.0",
+		"@types/node": "16.11.7",
+		"@types/node-fetch": "2.5.7",
 		"@types/node-ipc": "9.2.0",
-		"@types/validator": "13.6.6",
-		"@types/ws": "7.4.4",
-		"archiver": "5.3.0",
+		"@types/validator": "13.7.6",
+		"@types/ws": "8.5.3",
+		"archiver": "5.3.1",
 		"archiver-zip-encryptable": "1.0.10",
-		"chai": "4.2.0",
-		"colors": "1.4.0",
-		"dblapi.js": "2.4.1",
-		"discord-api-types": "0.29.0",
-		"discord.js": "13.6.0",
-		"dropbox": "10.13.0",
+		"discord-api-types": "0.37.5",
+		"discord.js": "14.3.0",
+		"dropbox": "10.32.0",
+		"express": "4.18.1",
 		"link-module-alias": "1.2.0",
-		"mariadb": "3.0.0",
+		"mariadb": "3.0.1",
 		"moment": "2.29.4",
 		"node-ipc": "10.1.0",
 		"random-js": "2.1.0",
-		"sequelize": "6.8.0",
+		"sequelize": "6.21.4",
 		"toml": "3.0.0",
-		"ts-jest": "27.0.2",
-		"typescript": "4.3.2",
+		"topgg-autoposter": "^2.0.1",
+		"typescript": "4.8.2",
 		"typescript-eslint": "0.0.1-alpha.0",
-		"umzug": "3.1.1"
+		"umzug": "3.2.1"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "4.26.0",
-		"@typescript-eslint/parser": "4.26.0",
-		"eslint": "7.28.0",
+		"@typescript-eslint/eslint-plugin": "5.36.1",
+		"@typescript-eslint/parser": "5.36.1",
+		"eslint": "8.23.0",
 		"eslint-config-google": "0.14.0",
-		"jest": "27.0.4",
-		"jshint": "2.12.0"
+		"jest": "28.0.0",
+		"jshint": "2.13.5",
+		"ts-jest": "28.0.8"
 	}
 }
