--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
 	"moduleResolution": "node",
 	"skipLibCheck": true,
 	"resolveJsonModule": true,
-	"target": "es6"
+	"target": "es6",
+	"allowSyntheticDefaultImports": true
 },
 "include": ["src/**/*", "test/**/*"],
 "exclude": ["node_modules", "**/*.spec.ts"]
