--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	},
 	"dependencies": {
 		"@discordjs/rest": "1.1.0",
-		"@top-gg/sdk": "^3.1.3",
+		"@top-gg/sdk": "3.1.3",
 		"@types/archiver": "5.3.1",
 		"@types/bluebird": "3.5.36",
 		"@types/express": "4.17.13",
@@ -53,7 +53,7 @@
 		"random-js": "2.1.0",
 		"sequelize": "6.21.4",
 		"toml": "3.0.0",
-		"topgg-autoposter": "^2.0.1",
+		"topgg-autoposter": "2.0.1",
 		"typescript": "4.8.2",
 		"typescript-eslint": "0.0.1-alpha.0",
 		"umzug": "3.2.1"
