--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - develop
-
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,13 +15,16 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Login to Docker Hub
-      uses: actions/login-action@v2
+      uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%s')"
     -
       name: Build and push
       uses: docker/build-push-action@v3
@@ -28,4 +32,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/draftbot:$(date +%s)
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/draftbot-dev:${{ steps.date.outputs.date }}
