updated deepsource rules

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -3,3 +3,9 @@ version = 1
 [[analyzers]]
 name = "javascript"
 enabled = true
+
+exclude_patterns = [
+	"**/astronomy.ts",
+	"**/migrations/*.ts"
+]
+
