--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fr.bast.draftbot",
-	"version": "4.0.2",
+	"version": "4.0.2.a",
 	"main": "src/index.js",
 	"engines": {
 		"node": ">=14.17.2"
